--- a/profilerapp/templates/getting_started.html
+++ b/profilerapp/templates/getting_started.html
@@ -12,7 +12,12 @@
         <div class="text-center">
             <h1>Welcome to Profiler</h1>
             <p class="lead">Manage profile easily and efficiently.</p>
-            <a href="{% url 'user_login' %}" class="btn btn-primary btn-lg">Getting Started</a>
+            {% if user.is_authenticated %}
+                <a href="{% url 'home' %}" class="btn btn-primary btn-lg">Getting Started</a>
+            {% else %}
+                <a href="{% url 'user_login' %}" class="btn btn-primary btn-lg">Getting Started</a>
+            {% endif %}
+            
         </div>
     </div>
 </body>
