--- a/profilerapp/templates/navbar.html
+++ b/profilerapp/templates/navbar.html
@@ -10,7 +10,7 @@
                 <div class="collapse navbar-collapse" id="mynavbar"> 
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a href="{% url "getting_started" %}" class="nav-link text-white">Home</a>
+                            <a href="{% url "home" %}" class="nav-link text-white">Home</a>
                         </li>
                         <li class="nav-item">
                             <a href="" class="nav-link text-white">Contact</a>
