--- a/profilerapp/templates/base.html
+++ b/profilerapp/templates/base.html
@@ -14,7 +14,7 @@
         <div class="">
             {% if messages %}
                 {% for message in messages %}
-                <div class="alert alert-warning alert-dismissible fade show mt-3" role="alert">
+                <div class="alert alert-warning alert-dismissible fade show mt-3" role="alert" id="myAlert">
                     {{ message }}
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                   </div>
@@ -27,8 +27,14 @@
         </div>
     </div>
 
-
-    <!-- Bootstrap JS -->
+    <script>
+        setTimeout(function () {
+            let alert = document.getElementById('myAlert')
+            if(alert){
+                alert.remove()
+            }
+        }, 2000)
+    </script>
     
 </body>
 </html>
