--- a/profilerapp/templates/navbar.html
+++ b/profilerapp/templates/navbar.html
@@ -13,10 +13,10 @@
                             <a href="{% url "home" %}" class="nav-link text-white">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link text-white">Contact</a>
+                            <a href="{% url "contact" %}" class="nav-link text-white">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link text-white">About Us</a>
+                            <a href="{% url "about_us" %}" class="nav-link text-white">About Us</a>
                         </li>
                     </ul>
                 </div>
